--- a/AspNetCoreTicketSystem/Views/Shared/_Layout.cshtml.css
+++ b/AspNetCoreTicketSystem/Views/Shared/_Layout.cshtml.css
@@ -12,9 +12,10 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+    margin-top: 20px;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
