--- a/AspNetCoreTicketSystem/Views/Tickets/Create.cshtml
+++ b/AspNetCoreTicketSystem/Views/Tickets/Create.cshtml
@@ -19,12 +19,21 @@
     </div>
     <div class="form-group">
         <label asp-for="Status" class="control-label"></label>
-        <input asp-for="Status" class="form-control" />
+        <select asp-for="Status" class="form-control" asp-items="@(new List<SelectListItem>
+    {
+        new SelectListItem { Value = "", Text = "Click Here", Disabled = true, Selected = true },
+        new SelectListItem { Value = "Pending", Text = "Pending" },
+        new SelectListItem { Value = "Active", Text = "Active" },
+        new SelectListItem { Value = "Closed", Text = "Closed" }
+    })">
+        </select>
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
-    <div class="form-group">
+
+    <div class="form-group" style="margin-top: 20px;">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
+
 </form>
 
 <a asp-action="Index">Back to List</a>
