--- a/AspNetCoreTicketSystem/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreTicketSystem/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted">
         <div class="container">
             &copy; 2024 - AspNetCoreTicketSystem - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
