--- a/AspNetCoreTicketSystem/Views/ManageUsers/Index.cshtml
+++ b/AspNetCoreTicketSystem/Views/ManageUsers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ManageUsersViewModel
 
 @{
-    ViewData["Title"] = "Manage users";
+    ViewData["Title"] = "Manage Users";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -15,14 +15,15 @@
             <td>Email</td>
         </tr>
     </thead>
-
-    @foreach (var user in Model.Administrators)
-    {
-            <tr>
-                <td>@user.Id</td>
-                <td>@user.Email</td>
-            </tr>
-    }
+    <tbody>
+        @foreach (var user in Model.Administrators)
+        {
+                <tr>
+                    <td>@user.Id</td>
+                    <td>@user.Email</td>
+                </tr>
+        }
+    </tbody>
 </table>
 
 <h3>Everyone</h3>
@@ -32,14 +33,37 @@
         <tr>
             <td>Id</td>
             <td>Email</td>
+            <td>Assign Role</td>
         </tr>
     </thead>
+    <tbody>
+        @foreach (var user in Model.Everyone)
+        {
+                <tr>
+                    <td>@user.Id</td>
+                    <td>@user.Email</td>
+                    <td>
+                        <form asp-action="AssignRole" method="post" class="form-inline">
+                            <input type="hidden" name="userId" value="@user.Id" />
+                            <select name="roleName" class="form-control">
+                            @foreach (var role in Model.Roles)
+                            {
+                                var isAssigned = Model.UserRoles.ContainsKey(user.Id) && Model.UserRoles[user.Id].Contains(role.Name);
 
-    @foreach (var user in Model.Everyone)
-    {
-            <tr>
-            <td>@user.Id</td>
-            <td>@user.Email</td>
-            </tr>
-    }
+                                if (!isAssigned)
+                                {
+                                                <option value="@role.Name">@role.Name</option>
+                                }
+                                else
+                                {
+                                                <option value="@role.Name" disabled>@role.Name (Assigned)</option>
+                                }
+                            }
+                            </select>
+                            <input type="submit" value="Assign" class="btn btn-primary" />
+                        </form>
+                    </td>
+                </tr>
+        }
+    </tbody>
 </table>
