--- a/AspNetCoreTicketSystem/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreTicketSystem/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Tickets</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurrentJobs" asp-action="Index">Current Jobs</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         @* Conditionally display the Helpdesk Users link *@
