--- a/AspNetCoreTicketSystem/Views/CurrentJobs/Edit.cshtml
+++ b/AspNetCoreTicketSystem/Views/CurrentJobs/Edit.cshtml
@@ -25,8 +25,8 @@
         <input asp-for="CreatedAt" class="form-control" readonly />
     </div>
     <div class="form-group">
-        <label asp-for="TimeToComplete" class="control-label"></label>
-        <input asp-for="TimeToComplete" class="form-control" readonly />
+        <label asp-for="CompletionStatus" class="control-label"></label>
+        <input asp-for="CompletionStatus" class="form-control" readonly />
     </div>
         <div class="form-group" style="margin-top: 20px;">
         <input type="hidden" asp-for="Id" />
