--- a/AspNetCoreTicketSystem/Views/Tickets/Edit.cshtml
+++ b/AspNetCoreTicketSystem/Views/Tickets/Edit.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "Edit Ticket";
-    var isHelpdesk = User.IsInRole(Constants.HelpdeskRole);
 }
 
 <h1>Edit Ticket</h1>
@@ -10,12 +9,12 @@
 <form asp-action="Edit">
     <div class="form-group">
         <label asp-for="Title" class="control-label"></label>
-        <input asp-for="Title" class="form-control" readonly />
+        <input asp-for="Title" class="form-control" />
         <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Description" class="control-label"></label>
-        <textarea asp-for="Description" class="form-control" readonly></textarea>
+        <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group" style="margin-top: 20px;">
