--- a/AspNetCoreTicketSystem/Views/Tickets/Edit.cshtml
+++ b/AspNetCoreTicketSystem/Views/Tickets/Edit.cshtml
@@ -19,6 +19,7 @@
     </div>
     <div class="form-group" style="margin-top: 20px;">
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="Status" />
         <input type="submit" value="Save Changes" class="btn btn-primary" />
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </div>
